# Citecraft.ai

./: .gitignore  .replit  README.md  RENDER_DEPLOYMENT.md  app.py  pyproject.toml  render.yaml  replit.md  requirements.txt
attached_assets/: Pasted-Pasted-Objective-Build-an-innovative-AI-powered-research-paper-generation-platform-with-a-rich-attra-1758272817300_1758272817301.txt  Pasted-SPANDHANA-AN-EMPATHETIC-AI-CHATBOT-FOR-MENTAL-HEALTH-SUPPORT-USING-LARGE-LANGUAGE-MODELS-Abstract--1758284206173_1758284206173.txt
instance/: research_platform.db
static/css/: style.css
static/js/: main.js
templates/: dashboard.html  index.html  login.html  paper_viewer.html
