[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "docx>=0.2.4",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "lxml>=6.0.1",
    "markdown2>=2.5.4",
    "pyjwt>=2.10.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "reportlab>=4.4.3",
    "requests>=2.32.5",
    "werkzeug>=3.1.3",
]
